@@ -230,6 +230,14 @@ class RTFDoc(BaseDoc.BaseDoc):
 
     #--------------------------------------------------------------------
     #
+    # Inserts a manual page break
+    #
+    #--------------------------------------------------------------------
+    def page_break(self):
+        self.f.write('\\page\n')
+
+    #--------------------------------------------------------------------
+    #
     # Starts boldfaced text, enclosed the braces
     #
     #--------------------------------------------------------------------
