@@ -1,3 +1,6 @@
+2006-09-12  Brian Matherly  <brian@gramps-project.org>
+    * src/docgen/RTFDoc.py: fix page breaks (#0000441)
+
 2006-09-12  Don Allingham  <don@gramps-project.org>
 	* src/DataViews/_RelationView.py: provide a waring if a broken
 	family is detected
@@ -52,8 +55,8 @@
 	* po/POTFILES.in: remove non-shipping modules
 
 2006-09-01  Brian Matherly  <brian@gramps-project.org>
-        * src/plugins/Calendar.py: fix filter typo
-        * src/plugins/WritePkg.py: don't set uid on Windows
+    * src/plugins/Calendar.py: fix filter typo
+    * src/plugins/WritePkg.py: don't set uid on Windows
 
 2006-09-01  Alex Roitman  <shura@gramps-project.org>
 	* src/GrampsDb/_DbUtils.py: Use normal addition: this updates
